# why_llms_hallucinate

./: .gitignore  OLLAMA_README.md  QUICKSTART.md  README.md  ollama_experiments.ipynb  pyproject.toml  why_llms_hallucinate.ipynb
scripts/: run_experiments.py
src/hallucination_experiments/: __init__.py  data.py  evaluation.py  experiments.py  ollama_client.py
