[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucination-experiments"
version = "0.1.0"
description = "Experimental validation of hallucination theory using real LLMs via Ollama"
authors = [{name = "Sulbha Jain", email = ""}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "ollama>=0.0.10",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[project.urls]
Repository = "https://github.com/yourusername/why_llms_hallucinate"
Issues = "https://github.com/yourusername/why_llms_hallucinate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hallucination_experiments"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
